--- a/income.html
+++ b/income.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,79 +7,10 @@
     <title>Income Page</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            background-image: url('income.gif');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            flex-direction: column;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            margin: 0;
-        }
-
-        .container {
-            max-width: 400px;
-            margin: 20px;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        input[type="text"],
-        input[type="number"],
-        button {
-            margin: 10px;
-            padding: 5px 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-
-        button {
-            background-color: #007bff;
-            color: white;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin-bottom: 5px;
-        }
-
-        .transactions {
-            margin-top: 20px;
-            text-align: left;
-        }
-
-        .show-more {
-            margin-top: 10px;
-            cursor: pointer;
-        }
+        /* Your existing styles */
+        /* ... */
     </style>
 </head>
-
 <body>
     <div class="container">
         <h1>Income Page</h1>
@@ -91,13 +21,12 @@
             <input type="text" id="source" name="source" required><br>
             <label for="amount">Amount:</label>
             <input type="number" id="amount" name="amount" required><br>
-            <button type="submit">Add Income</button>
+            <button type="button" id="add-income">Add Income</button>
         </form>
         <h2>Income History</h2>
         <ul id="income-history"></ul>
+        <button id="show-more" class="show-more" style="display:none;">Show More</button>
     </div>
-
     <script src="script.js"></script>
 </body>
-
 </html>
