--- a/expense.html
+++ b/expense.html
@@ -7,14 +7,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Page</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-image: url('expenses.gif');
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            flex-direction: column;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            line-height: 1.5; /* Ensure there is a line break after each line */
+        }
+
+        h1, h2, h3, h4, h5, h6, p, label {
+            margin-bottom: 10px; /* Add some space between each line of text */
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 20px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        input[type="text"],
+        input[type="number"],
+        button {
+            margin: 10px;
+            padding: 5px 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        button {
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 5px;
+        }
+
+        .transactions {
+            margin-top: 20px;
+            text-align: left;
+        }
+
+        .show-more {
+            margin-top: 10px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
-<body style="background-image: url('expenses.gif'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+<body>
     <div class="container">
         <h1>Expense Page</h1>
-
         <div>Total Expenses: ₹ <span id="total-expenses">0</span></div>
-
         <h2>Add Expense</h2>
         <form id="expense-form">
             <label for="source">Source:</label>
@@ -23,7 +94,6 @@
             <input type="number" id="amount" name="amount" required><br>
             <button type="submit">Add Expense</button>
         </form>
-
         <h2>Expense History</h2>
         <ul id="expense-history"></ul>
         <button id="show-more-expense" class="show-more" style="display:none;">Show More</button>
