--- a/signup.html
+++ b/signup.html
@@ -10,8 +10,48 @@
             background-image: url('login.gif');
             background-repeat: no-repeat;
             background-size: cover;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        /* Add additional CSS styles as needed */
+        .signup-container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            text-align: center;
+        }
+        .input-group {
+            margin-bottom: 10px;
+            text-align: left;
+        }
+        .input-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .input-group input {
+            width: 100%;
+            padding: 8px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        .input-group button {
+            width: 100%;
+            padding: 8px;
+            border-radius: 5px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+        }
+        .input-group button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -35,7 +75,7 @@
             var newUsername = document.getElementById('newUsername').value;
             var newPassword = document.getElementById('newPassword').value;
 
-            if(newPassword.length < 8) {
+            if (newPassword.length < 8) {
                 alert('Password must be at least 8 characters long.');
                 return;
             }
