--- a/login.html
+++ b/login.html
@@ -50,34 +50,18 @@
             var username = document.getElementById('username').value.trim();
             var password = document.getElementById('password').value.trim();
 
-            // Read the username.txt file
-            fetch('username.txt')
-                .then(response => response.text())
-                .then(data => {
-                    var usernames = data.split('\n');
-                    // Check if the username is found in usernames
-                    if (usernames.includes(username)) {
-                        // Read the password.txt file
-                        fetch('password.txt')
-                            .then(response => response.text())
-                            .then(data => {
-                                var passwords = data.split('\n');
-                                // Find the index of the username in usernames
-                                var index = usernames.indexOf(username);
-                                // Check if the password matches the password at the same index
-                                if (passwords[index] === password) {
-                                    // Redirect to homepage.html if login is successful
-                                    window.location.href = 'homepage.html';
-                                } else {
-                                    // Show error message and stay on the login page
-                                    alert('Invalid username or password');
-                                }
-                            });
-                    } else {
-                        // Show error message and stay on the login page
-                        alert('Invalid username or password');
-                    }
-                });
+            // Read the username and password from localStorage
+            var storedUsername = localStorage.getItem('username');
+            var storedPassword = localStorage.getItem('password');
+
+            // Check if the entered username and password match the stored values
+            if (username === storedUsername && password === storedPassword) {
+                // Redirect to homepage.html if login is successful
+                window.location.href = 'homepage.html';
+            } else {
+                // Show error message and stay on the login page
+                alert('Invalid username or password');
+            }
         });
     </script>
 </body>
