--- a/savings.html
+++ b/savings.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Savings Page</title>
+    <title>Savings</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-image: url('savings.gif');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        .container {
+            padding: 20px;
+            color: white;
+            text-align: center;
+        }
+
+        h1 {
+            margin-top: 0;
+        }
+
+        .transactions {
+            margin-top: 20px;
+        }
+
+        .transactions ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .transactions ul li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
+
 <body>
     <div class="container">
-        <h1>Savings Page</h1>
-        <div>Total Savings: ₹ <span id="total-savings">0</span></div>
-        <h2>Add Savings</h2>
-        <form id="savings-form">
-            <label for="source">Source:</label>
-            <input type="text" id="source" name="source" required><br>
-            <label for="amount">Amount:</label>
-            <input type="number" id="amount" name="amount" required><br>
-            <button type="submit" id="add-savings">Add Savings</button>
-        </form>
-        <h2>Savings History</h2>
-        <ul id="savings-history"></ul>
-        <button id="show-more-savings" style="display:none;">Show More</button>
+        <h1>Total Savings: ₹ <span id="total-savings">0</span></h1>
+        <div class="transactions">
+            <h2>Last 5 Transactions</h2>
+            <ul id="savings-history"></ul>
+        </div>
     </div>
     <script src="savings.js"></script>
 </body>
+
 </html>
