--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,61 +12,61 @@
             background-image: url('dashboard.gif');
             background-repeat: no-repeat;
             background-size: cover;
-        }
-
-        .container {
             padding: 20px;
             color: white;
-            text-align: center;
         }
 
         h1 {
             margin-top: 0;
         }
 
-        .user-info {
+        .dashboard-data {
+            display: flex;
+            justify-content: space-between;
             margin-top: 20px;
-            text-align: left;
         }
 
-        .user-info label {
-            display: inline-block;
-            width: 150px;
+        .dashboard-data div {
+            margin-bottom: 20px;
         }
 
-        .user-info input {
-            width: 200px;
-            margin-bottom: 10px;
-        }
-
-        .totals {
+        .logout {
+            text-align: center;
             margin-top: 20px;
-            text-align: left;
         }
 
-        .totals div {
-            margin-bottom: 10px;
+        .logout button {
+            padding: 5px 10px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Dashboard</h1>
-        <div class="user-info">
-            <label for="username">Name:</label>
-            <span id="username">username</span><br>
-            <label for="dob">Date of birth:</label>
-            <input type="text" id="dob" name="dob" value="xx/xx/xxxx"><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" value="abc@gmail.com"><br>
+        <div class="dashboard-data">
+            <div>
+                <h2>Total Income:</h2>
+                <span id="total-income">0</span>
+            </div>
+            <div>
+                <h2>Total Expense:</h2>
+                <span id="total-expense">0</span>
+            </div>
+            <div>
+                <h2>Total Savings:</h2>
+                <span id="total-savings">0</span>
+            </div>
         </div>
-        <div class="totals">
-            <div>Total Income: ₹ <span id="total-income">0</span></div>
-            <div>Total Expense: ₹ <span id="total-expense">0</span></div>
-            <div>Total Savings: ₹ <span id="total-savings">0</span></div>
+        <div class="logout">
+            <button onclick="logout()">Logout</button>
         </div>
-        <button onclick="logout()">Logout</button>
     </div>
     <script src="dashboard.js"></script>
 </body>
+
 </html>
