--- a/dashboard.html
+++ b/dashboard.html
@@ -6,43 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            background-image: url('dashboard.gif');
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .container {
-            padding: 20px;
-            color: white;
-            text-align: center;
-        }
-
-        h1 {
-            margin-top: 0;
-        }
-
-        .info {
-            margin-top: 20px;
-            text-align: left;
-        }
-
-        .info p {
-            margin: 5px 0;
-        }
-
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="dashboard.css">
 </head>
 
 <body>
